# pybr-2025-tutorial-banco-ta-lento-bora-otimizar

./: .gitignore  docker-compose.yaml  pyproject.toml
notebooks/: prepare-data-mass.ipynb
tutorial/: settings.py
tutorial/dbcrusher/: apps.py  models.py
tutorial/dbcrusher/migrations/: 0001_initial.py
